--- a/Bootstrap/assets/css/main.css
+++ b/Bootstrap/assets/css/main.css
@@ -266,4 +266,17 @@ a:after {
     -webkit-transform:rotate(360deg);
     -moz-transform:rotate(360deg);
     -o-transform:rotate(360deg);
-}   
+} 
+
+.inner-header
+{
+	font-size: 4em;
+}  
+
+.margin5pct {
+	margin-top: 5%;
+}
+
+.width-full {
+	width: 100%;
+}
