--- a/Bootstrap/assets/css/main.css
+++ b/Bootstrap/assets/css/main.css
@@ -280,3 +280,31 @@ a:after {
 .width-full {
 	width: 100%;
 }
+
+ul{ float: right; }
+li{ display: inline; float: left;} img.logo{float: left;}
+
+/* Size and center the menu */ 
+nav{ width: 960px; margin: 0 auto;} 
+
+header{ background: #ffffff; border-bottom: 1px solid #aaaaaa; float: left; width: 100%; position: fixed; z-index: 10; }
+header a{ color: #969696; text-decoration: none; text-transform: uppercase; font-size: 1em; }
+header a.active, header a:hover{ color: #3d3d3d; }
+header li{ margin-right: 30px; }
+
+/* Sizes for the bigger menu */
+header.large{ height: 80%; }
+header.large img{ width: 60%; height: 60%; vertical-align: middle;}
+header.large li{ margin-top: 45px; }
+
+/* Sizes for the smaller menu */
+header.small{ height: 15%; margin: 0px; }
+header.small img{ width: 20%; height: 10%; margin-top: -10px; }
+header.small li{ margin-top: 10%; }
+
+header,nav, a, img, li{
+  transition: all 1s;
+  -moz-transition: all 1s; /* Firefox 4 */
+  -webkit-transition: all 1s; /* Safari and Chrome */
+  -o-transition: all 1s; /* Opera */
+}
