--- a/Bootstrap/assets/css/main.css
+++ b/Bootstrap/assets/css/main.css
@@ -281,13 +281,15 @@ a:after {
 	width: 100%;
 }
 
+/* New menu style */
+
 ul{ float: right; }
 li{ display: inline; float: left;} img.logo{float: left;}
 
 /* Size and center the menu */ 
 nav{ width: 960px; margin: 0 auto;} 
 
-header{ background: #ffffff; border-bottom: 1px solid #aaaaaa; float: left; width: 100%; position: fixed; z-index: 10; }
+header{ background: url('../img/background.png'); border-bottom: 1px solid #aaaaaa; float: left; width: 100%; position: fixed; z-index: 10; }
 header a{ color: #969696; text-decoration: none; text-transform: uppercase; font-size: 1em; }
 header a.active, header a:hover{ color: #3d3d3d; }
 header li{ margin-right: 30px; }
@@ -307,4 +309,22 @@ header,nav, a, img, li{
   -moz-transition: all 1s; /* Firefox 4 */
   -webkit-transition: all 1s; /* Safari and Chrome */
   -o-transition: all 1s; /* Opera */
+}
+
+/* overlay */
+
+.overlay {
+    position:absolute;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    background-color:rgba(0, 0, 0, 0.85);
+    background: url(data:;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAACCAYAAABytg0kAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAABl0RVh0U29mdHdhcmUAUGFpbnQuTkVUIHYzLjUuNUmK/OAAAAATSURBVBhXY2RgYNgHxGAAYuwDAA78AjwwRoQYAAAAAElFTkSuQmCC) repeat scroll transparent\9; /* ie fallback png background image */
+    z-index:9999;
+    color:white;
+}
+
+.position-rel {
+	position:relative;
 }
