--- a/Bootstrap/assets/css/main.css
+++ b/Bootstrap/assets/css/main.css
@@ -289,7 +289,7 @@ li{ display: inline; float: left;} img.logo{float: left;}
 /* Size and center the menu */ 
 nav{ width: 960px; margin: 0 auto;} 
 
-header{ background: url('../img/background.png'); border-bottom: 1px solid #aaaaaa; float: left; width: 100%; position: fixed; z-index: 10; }
+header{ background: #444444; border-bottom: 1px solid #aaaaaa; float: left; width: 100%; position: fixed; z-index: 10; }
 header a{ color: #969696; text-decoration: none; text-transform: uppercase; font-size: 1em; }
 header a.active, header a:hover{ color: #3d3d3d; }
 header li{ margin-right: 30px; }
@@ -327,4 +327,18 @@ header,nav, a, img, li{
 
 .position-rel {
 	position:relative;
+}
+
+/* Experimenting with new Headind styles */
+
+header.large .tagline {
+	padding-top: 25%;
+	font-size: 3em;
+	color: #FFFFFF;
+}
+
+header.small .tagline {
+	padding: 4%;
+	font-size: 2em;
+	color:#FFFFFF;
 }
