--- a/Bootstrap/assets/css/main.css
+++ b/Bootstrap/assets/css/main.css
@@ -302,19 +302,20 @@ li{ display: inline; float: left;} img.logo{float: left;}
 /* Size and center the menu */ 
 nav{ width: 960px; margin: 0 auto;} 
 
-header{ background: #444444; border-bottom: 1px solid #aaaaaa; float: left; width: 100%; position: fixed; z-index: 10; }
+header{ border-bottom: 1px solid #aaaaaa; float: left; width: 100%; position: fixed; z-index: 10; }
 header a{ color: #969696; text-decoration: none; text-transform: uppercase; font-size: 1em; }
 header a.active, header a:hover{ color: #3d3d3d; }
 header li{ margin-right: 30px; }
 
 /* Sizes for the bigger menu */
-header.large{  }
-header.large img{ width: 60%; height: 60%; vertical-align: middle;}
+header.large{ background: url('../img/bg.jpg'); }
+header.large img{ width: 30%; height: 30%; clear: both; margin-top:30%; float:right; }
 header.large li{ margin-top: 45px; }
+header.large label{vertical-align: middle;}
 
 /* Sizes for the smaller menu */
-header.small{ margin: 0px; }
-header.small img{ width: 20%; height: 10%; margin-top: -10px; }
+header.small{ margin: 0px; background: url('../img/bg.jpg'); }
+header.small img{ width: 10%; height: 10%;  clear:both; }
 header.small li{ margin-top: 10%; }
 
 header,nav, a, img, li, label{
@@ -345,15 +346,14 @@ header,nav, a, img, li, label{
 /* new Heading style: the "Welcome to bodhi" thingie */
 
 header.large .tagline {
-	padding-top: 25%;
 	font-size: 3em;
 	color: #FFFFFF;
 }
 
 header.small .tagline {
-	padding-top: 4%;
 	font-size: .8em;
 	color:#FFFFFF;
+	clear:both;
 }
 
 /* Style for more buttons */
